@@ -14,6 +14,7 @@ cupt (0.1.2) UNRELEASED; urgency=low
     - Core:
       - 'mydie', 'myerr', 'mywarn' subroutines now print to STDERR. Thanks to
         Stefano Zacchiroli <zack@debian.org>.
+      - New subroutine 'is_version_string_native'.
     - Download:
       - Manager:
         - [API break] 'download' method: now one should specify array of URIs,
